# ffkit

./: .gitignore  CLAUDE.md  LANDING.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: bundled-binaries.md
scripts/: gen-installer-art.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: encoders.rs  estimate.rs  jobs.rs  mod.rs  probe.rs  settings.rs  system.rs  waveform.rs
src-tauri/src/ffmpeg/: encoders.rs  gpu.rs  mod.rs  presets.rs  progress.rs  raw_args.rs  reader.rs  runner.rs
src/components/: AdvancedMode.tsx  BatchProgress.tsx  CommandEditor.tsx  ConfirmOverwritePanel.tsx  EncoderBadge.tsx  FeatureButtons.tsx  FileCard.tsx  FileDropZone.tsx  FileList.tsx  FilePicker.tsx  HeroGreeting.tsx  JobActions.tsx  JobLog.tsx  JobProgress.tsx  JobProgressMeter.tsx  JobResultCard.tsx  JobRow.tsx  JobStat.tsx  JobStatsLine.tsx  JobStatusWord.tsx  JobsDock.tsx  MediaInfoModal.tsx  NumberPresetField.tsx  PromptTemplatePanel.tsx  QualityButtons.tsx  Settings.tsx  SimpleMode.tsx  SizeEstimateLine.tsx  TrimSelector.tsx  UpdateBanner.tsx  WindowControls.tsx
src/components/icons/: BookIcon.tsx  FFKitLogo.tsx  QualityIcons.tsx  ShrinkArrow.tsx  UploadIcon.tsx
src/components/ui/: Modal.tsx  Row.tsx  Section.tsx  (+2 more)
src/lib/: commandBuilder.ts  dialogs.ts  ffmpeg-args.ts  format.ts  i18n.ts  jobPhaseWords.ts  jobsContext.tsx  path.ts  presets.ts  settingsContext.tsx  shellArgs.ts  sizeEstimate.ts  tauri.ts  types.ts  updaterContext.tsx  useAllJobs.ts  useAppBootstrap.ts  useCommandState.ts  useFileDrop.ts  useJobEvents.ts  usePromptTemplate.ts  useSizeEstimate.ts  useTauriListener.ts  useTypewriter.ts  useWaveform.ts  utils.ts
src/locales/: en.json  fr.json
tests/e2e/: 01-app-shell.spec.ts  02-simple-mode.spec.ts  03-advanced-mode.spec.ts  04-job-progress.spec.ts  05-settings.spec.ts  helpers.ts
tests/fixtures/: ffmpeg-raw-args-cases.json
tests/unit/: JobProgress.lifecycle.test.tsx  rawArgs.parity.test.ts  setup.ts  sizeEstimate.test.ts
(+8 files in other folders)
