[package]
name = "ffkit"
version = "1.0.1"
description = "FFKit — a clean desktop wrapper for ffmpeg"
authors = ["FFKit Contributors"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "ffkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
